[package]
name = "viam-mdns"
version = "3.0.1"
authors = ["Dylan McKay <me@dylanmckay.io>", "Ethan Rodkin <ethanrodkin@viam.com"]
edition = "2021"

description = """
A multicast DNS client library.

Supports discovery of any mDNS device on a LAN.
"""

license = "MIT"
documentation = "https://docs.rs/viam-mdns"
repository = "https://github.com/stuqdog/mdns"

categories = ["network-programming"]
keywords = ["mdns", "dns", "multicast", "chromecast", "discovery"]

[dependencies]
dns-parser = "0.8.0"
net2 = "0.2"
err-derive = "0.2.1"
futures-core = "0.3.1"
futures-util = "0.3.1"
log = "0.4"
async-stream = "0.2.0"
async-std = { version = "1.6.2", features = ["unstable", "attributes"] }
